[tool.poetry]
name = "unsi"
version = "0.1.0"
description = "Parse ANSI escape sequences"
authors = ["Felipe S. S. Schneider <schneider.felipe@posgrad.ufsc.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ochre = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.1"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
