[tool.poetry]
name = "stransi"
version = "0.3.0"
description = "A lightweight parser for ANSI escape sequences"
authors = ["Felipe S. S. Schneider <schneider.felipe@posgrad.ufsc.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/getcuia/stransi"
repository = "https://github.com/getcuia/stransi"
keywords = [
    "ansi-colors",
    "ansi-escape-codes",
    "ansi",
    "console",
    "cuia",
    "parser",
    "stransi",
    "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Text Processing :: Markup",
]

[tool.poetry.dependencies]
python = "^3.8"
ochre = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
bandit = "^1.7.1"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
pylint = "^2.11.1"
mypy = "^0.920"
black = {version = "^21.11b0", allow-prereleases = true}
hypothesis = "^6.31.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
